Added "mine" filter.

--- a/web/tmpl/History.tmpl
+++ b/web/tmpl/History.tmpl
@@ -123,6 +123,7 @@ function run_get_history() {
   Show: 
   <select id="time_range" onchange="run_get_history();">
    <option value="0">All</option>
+   <option value="-3">Mine</option>
    <option value="-1">Starred</option>
    <option value="-2">Comments</option>
    <option value="1">Last hour</option>
