Fix to CGI::Ajax conversion.

--- a/web/tmpl/CoGeBlast.tmpl
+++ b/web/tmpl/CoGeBlast.tmpl
@@ -848,7 +848,7 @@ function get_seq(which_type) {
 				gstid: seqObj.gstid
 			},
 			success : function(html) {
-				$('#seq_box').html(html);
+				$('#seq_box').val(html);
 			},
 		});
 		/*
@@ -878,7 +878,7 @@ function get_seq(which_type) {
 				gstid: seqObj.gstid
 			},
 			success : function(html) {
-				$('#seq_box').html(html);
+				$('#seq_box').val(html);
 			},
 		});
 		/*
