Prevent wrapping of time/data display in table.

--- a/web/tmpl/History.tmpl
+++ b/web/tmpl/History.tmpl
@@ -279,7 +279,7 @@ $(document).ready(function() {
   <TMPL_LOOP NAME=HISTORY_LOOP>
   <tr valign="top">
    <td align='center'><img id='<TMPL_VAR NAME=LOG_ID>' class='link star' src='<TMPL_VAR NAME=STAR_ICON>'></td>
-   <td><TMPL_VAR NAME=TIME></td>
+   <td style="white-space:nowrap"><TMPL_VAR NAME=TIME></td>
    <td><TMPL_VAR NAME=USER></td>
    <td><TMPL_VAR NAME=PAGE></td>
    <td><TMPL_VAR NAME=DESCRIPTION></td>
