--- a/web/tmpl/widgets/FileSelect.tmpl
+++ b/web/tmpl/widgets/FileSelect.tmpl
@@ -131,6 +131,10 @@ function activate_on_input(input_id, button_id) {
 }
 
 function irods_get_path (path) {
+	$('#ids_loading').hide();
+	$('#ids_table').html('<tr><td colspan="3" style="white-space:nowrap;"><i>Under Construction</i></td></tr>');
+	return;
+
 	$.ajax({
 		data: {
 			jquery_ajax: 1,
@@ -371,19 +375,19 @@ function load_from_ncbi() {
   </div> <!-- tab-1 -->
 
   <div id="tab-2" class="small">
-    URL: <input id="input_url" size="30" />
+    URL: <input id="input_url" size="60" />
     <span id="ftp_get_button" onClick="load_from_ftp();" class='ui-state-disabled ui-button ui-corner-all ui-button-go'> Get </span>
   </div> <!-- tab-2 -->
 
   <TMPL_IF NAME='ENABLE_NCBI'>
   <div id="tab-3" class="small">
     Accession#: <input id="input_accn" size="15" />
-    <span id="ncbi_get_button" onClick="load_from_ncbi();" class='ui-button ui-corner-all ui-button-go'> Get</span>
+    <span id="ncbi_get_button" onClick="load_from_ncbi();" class='ui-button ui-corner-all ui-button-go'> Get </span>
   </div> <!-- tab-3 -->
   </TMPL_IF>
 
   <div id="tab-4" class="small">
-    File: <input id="input_upload_file" name="input_upload_file" type="file" data-url='<TMPL_VAR NAME="PAGE_NAME">' />
+    File: <input id="input_upload_file" name="input_upload_file" type="file" size="30" data-url='<TMPL_VAR NAME="PAGE_NAME">' />
   </div> <!-- tab-4 -->
 
 </div> <!-- tabs -->
